Fix: overflow

--- a/src/component/content_card/styles.css
+++ b/src/component/content_card/styles.css
@@ -1,12 +1,12 @@
 .content_card.MuiPaper-root {
 	max-width: 285px;
-	/* height: 492px; */
 	padding: 16px 24px 60px;
 	text-align: justify;
 	background-color: var(--purple);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 15px;
 	overflow: auto;
+	text-transform: none;
 }
 
 .content_card__title.default_font {
