--- a/src/component/learn_path_card/styles.css
+++ b/src/component/learn_path_card/styles.css
@@ -11,10 +11,11 @@
 	text-align: start;
 }
 
-.section_card p {
+.section_card .default_font {
 	margin-bottom: 8px;
 	font-size: 14px;
 	text-align: justify;
+	text-transform: none;
 }
 
 .button_wrapper {
